Analyser/src/main/java/fr/ufrst/m1info/projetcomp/m1comp2/analyser/mjj/MiniJaja.java
/* MiniJaja.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. MiniJaja.java */
    package fr.ufrst.m1info.projetcomp.m1comp2.analyser.mjj;
import fr.ufrst.m1info.projetcomp.m1comp2.ast.mjj.*;


    public class MiniJaja/*@bgen(jjtree)*/implements MiniJajaTreeConstants, MiniJajaConstants {/*@bgen(jjtree)*/
  protected static JJTMiniJajaState jjtree = new JJTMiniJajaState();public static void main(String[] args) {
            System.out.println("Reading from standard input...");
            MiniJaja mjj = new MiniJaja(System.in);
            try {
                SimpleNode n = mjj.Start();
                n.dump("");
                //MiniJajaVisitor dumpVisitor = new MiniJajaDumpVisitor();
                //n.jjtAccept(dumpVisitor, null);
            } catch (Exception e) {
                System.out.println("Oops.");
                System.out.println(e.getMessage());
                e.printStackTrace();
            }
        }

  static final public SimpleNode Start() throws ParseException {/*@bgen(jjtree) Start */
  ASTStart jjtn000 = new ASTStart(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
    try {
      classe();
jjtree.closeNodeScope(jjtn000, true);
               jjtc000 = false;
               if (jjtree.nodeCreated()) {
                jjtreeCloseNodeScope(jjtn000);
               }
{if ("" != null) return jjtn000;}
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        if (jjtree.nodeCreated()) {
         jjtreeCloseNodeScope(jjtn000);
        }
      }
    }
    throw new Error("Missing return statement in function");
}

        static void jjtreeOpenNodeScope(Node n) {
            ((SimpleNode)n).setLine(getToken(1).beginLine);
            ((SimpleNode)n).setColumn(getToken(1).beginColumn);
        }
        static void jjtreeCloseNodeScope(Node n) {
        }

        //------------------------------------------ FUNCTION
  static final public 

void classe() throws ParseException {/*@bgen(jjtree) classe */
  ASTclasse jjtn000 = new ASTclasse(JJTCLASSE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
    try {
      jj_consume_token(CLASS);
      ident();
      jj_consume_token(LBRACE);
      decls();
      methmain();
      jj_consume_token(RBRACE);
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      if (jjtree.nodeCreated()) {
       jjtreeCloseNodeScope(jjtn000);
      }
    }
    }
}

  static final public void ident() throws ParseException {/*@bgen(jjtree) ident */
  ASTident jjtn000 = new ASTident(JJTIDENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
    try {
      jj_consume_token(IDENT);
jjtree.closeNodeScope(jjtn000, true);
            jjtc000 = false;
            if (jjtree.nodeCreated()) {
             jjtreeCloseNodeScope(jjtn000);
            }
jjtn000.jjtSetValue(token.image);
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      if (jjtree.nodeCreated()) {
       jjtreeCloseNodeScope(jjtn000);
      }
    }
    }
}

  static final public void decls() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case FINAL:
    case VOID:
    case INT:
    case BOOLEAN:{
      decl();
      jj_consume_token(SEMICOLON);
ASTdecls jjtn001 = new ASTdecls(JJTDECLS);
                         boolean jjtc001 = true;
                         jjtree.openNodeScope(jjtn001);
                         jjtreeOpenNodeScope(jjtn001);
      try {
        decls();
      } catch (Throwable jjte001) {
if (jjtc001) {
                           jjtree.clearNodeScope(jjtn001);
                           jjtc001 = false;
                         } else {
                           jjtree.popNode();
                         }
                         if (jjte001 instanceof RuntimeException) {
                           {if (true) throw (RuntimeException)jjte001;}
                         }
                         if (jjte001 instanceof ParseException) {
                           {if (true) throw (ParseException)jjte001;}
                         }
                         {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
                           jjtree.closeNodeScope(jjtn001,  2);
                           if (jjtree.nodeCreated()) {
                            jjtreeCloseNodeScope(jjtn001);
                           }
                         }
      }
      break;
      }
    default:
      jj_la1[0] = jj_gen;
ASTvnil jjtn002 = new ASTvnil(JJTVNIL);
        boolean jjtc002 = true;
        jjtree.openNodeScope(jjtn002);
        jjtreeOpenNodeScope(jjtn002);
      try {
jjtree.closeNodeScope(jjtn002, true);
        jjtc002 = false;
        if (jjtree.nodeCreated()) {
         jjtreeCloseNodeScope(jjtn002);
        }

      } finally {
if (jjtc002) {
          jjtree.closeNodeScope(jjtn002, true);
          if (jjtree.nodeCreated()) {
           jjtreeCloseNodeScope(jjtn002);
          }
        }
      }
    }
}

  static final public void decl() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case FINAL:{
      jj_consume_token(FINAL);
      type();
      ident();
ASTcst jjtn001 = new ASTcst(JJTCST);
                             boolean jjtc001 = true;
                             jjtree.openNodeScope(jjtn001);
                             jjtreeOpenNodeScope(jjtn001);
      try {
        vexp();
      } catch (Throwable jjte001) {
if (jjtc001) {
                               jjtree.clearNodeScope(jjtn001);
                               jjtc001 = false;
                             } else {
                               jjtree.popNode();
                             }
                             if (jjte001 instanceof RuntimeException) {
                               {if (true) throw (RuntimeException)jjte001;}
                             }
                             if (jjte001 instanceof ParseException) {
                               {if (true) throw (ParseException)jjte001;}
                             }
                             {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
                               jjtree.closeNodeScope(jjtn001,  3);
                               if (jjtree.nodeCreated()) {
                                jjtreeCloseNodeScope(jjtn001);
                               }
                             }
      }
      break;
      }
    case VOID:
    case INT:
    case BOOLEAN:{
      typemeth();
      ident();
      decl_();
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void decl_() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LBRACKET:{
      jj_consume_token(LBRACKET);
      exp();
ASTtableau jjtn001 = new ASTtableau(JJTTABLEAU);
                           boolean jjtc001 = true;
                           jjtree.openNodeScope(jjtn001);
                           jjtreeOpenNodeScope(jjtn001);
      try {
        jj_consume_token(RBRACKET);
      } finally {
if (jjtc001) {
                             jjtree.closeNodeScope(jjtn001,  3);
                             if (jjtree.nodeCreated()) {
                              jjtreeCloseNodeScope(jjtn001);
                             }
                           }
      }
      break;
      }
    case LPAR:{
      jj_consume_token(LPAR);
      entetes();
      jj_consume_token(RPAR);
      jj_consume_token(LBRACE);
      vars();
      instrs();
ASTmethode jjtn002 = new ASTmethode(JJTMETHODE);
                                                       boolean jjtc002 = true;
                                                       jjtree.openNodeScope(jjtn002);
                                                       jjtreeOpenNodeScope(jjtn002);
      try {
        jj_consume_token(RBRACE);
      } finally {
if (jjtc002) {
                                                         jjtree.closeNodeScope(jjtn002,  5);
                                                         if (jjtree.nodeCreated()) {
                                                          jjtreeCloseNodeScope(jjtn002);
                                                         }
                                                       }
      }
      break;
      }
    default:
      jj_la1[2] = jj_gen;
ASTvar jjtn003 = new ASTvar(JJTVAR);
       boolean jjtc003 = true;
       jjtree.openNodeScope(jjtn003);
       jjtreeOpenNodeScope(jjtn003);
      try {
        vexp();
      } catch (Throwable jjte003) {
if (jjtc003) {
         jjtree.clearNodeScope(jjtn003);
         jjtc003 = false;
       } else {
         jjtree.popNode();
       }
       if (jjte003 instanceof RuntimeException) {
         {if (true) throw (RuntimeException)jjte003;}
       }
       if (jjte003 instanceof ParseException) {
         {if (true) throw (ParseException)jjte003;}
       }
       {if (true) throw (Error)jjte003;}
      } finally {
if (jjtc003) {
         jjtree.closeNodeScope(jjtn003,  3);
         if (jjtree.nodeCreated()) {
          jjtreeCloseNodeScope(jjtn003);
         }
       }
      }
    }
}

  static final public void vars() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case FINAL:
    case VOID:
    case INT:
    case BOOLEAN:{
      var();
      jj_consume_token(SEMICOLON);
ASTvars jjtn001 = new ASTvars(JJTVARS);
                        boolean jjtc001 = true;
                        jjtree.openNodeScope(jjtn001);
                        jjtreeOpenNodeScope(jjtn001);
      try {
        vars();
      } catch (Throwable jjte001) {
if (jjtc001) {
                          jjtree.clearNodeScope(jjtn001);
                          jjtc001 = false;
                        } else {
                          jjtree.popNode();
                        }
                        if (jjte001 instanceof RuntimeException) {
                          {if (true) throw (RuntimeException)jjte001;}
                        }
                        if (jjte001 instanceof ParseException) {
                          {if (true) throw (ParseException)jjte001;}
                        }
                        {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
                          jjtree.closeNodeScope(jjtn001,  2);
                          if (jjtree.nodeCreated()) {
                           jjtreeCloseNodeScope(jjtn001);
                          }
                        }
      }
      break;
      }
    default:
      jj_la1[3] = jj_gen;
ASTvnil jjtn002 = new ASTvnil(JJTVNIL);
        boolean jjtc002 = true;
        jjtree.openNodeScope(jjtn002);
        jjtreeOpenNodeScope(jjtn002);
      try {
jjtree.closeNodeScope(jjtn002, true);
        jjtc002 = false;
        if (jjtree.nodeCreated()) {
         jjtreeCloseNodeScope(jjtn002);
        }

      } finally {
if (jjtc002) {
          jjtree.closeNodeScope(jjtn002, true);
          if (jjtree.nodeCreated()) {
           jjtreeCloseNodeScope(jjtn002);
          }
        }
      }
    }
}

  static final public void var() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case VOID:
    case INT:
    case BOOLEAN:{
      typemeth();
      ident();
      var_();
      break;
      }
    case FINAL:{
      jj_consume_token(FINAL);
      type();
      ident();
ASTcst jjtn001 = new ASTcst(JJTCST);
                               boolean jjtc001 = true;
                               jjtree.openNodeScope(jjtn001);
                               jjtreeOpenNodeScope(jjtn001);
      try {
        vexp();
      } catch (Throwable jjte001) {
if (jjtc001) {
                                 jjtree.clearNodeScope(jjtn001);
                                 jjtc001 = false;
                               } else {
                                 jjtree.popNode();
                               }
                               if (jjte001 instanceof RuntimeException) {
                                 {if (true) throw (RuntimeException)jjte001;}
                               }
                               if (jjte001 instanceof ParseException) {
                                 {if (true) throw (ParseException)jjte001;}
                               }
                               {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
                                 jjtree.closeNodeScope(jjtn001,  3);
                                 if (jjtree.nodeCreated()) {
                                  jjtreeCloseNodeScope(jjtn001);
                                 }
                               }
      }
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void var_() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LBRACKET:{
      jj_consume_token(LBRACKET);
      exp();
ASTtableau jjtn001 = new ASTtableau(JJTTABLEAU);
                       boolean jjtc001 = true;
                       jjtree.openNodeScope(jjtn001);
                       jjtreeOpenNodeScope(jjtn001);
      try {
        jj_consume_token(RBRACKET);
      } finally {
if (jjtc001) {
                         jjtree.closeNodeScope(jjtn001,  3);
                         if (jjtree.nodeCreated()) {
                          jjtreeCloseNodeScope(jjtn001);
                         }
                       }
      }
      break;
      }
    default:
      jj_la1[5] = jj_gen;
ASTvar jjtn002 = new ASTvar(JJTVAR);
         boolean jjtc002 = true;
         jjtree.openNodeScope(jjtn002);
         jjtreeOpenNodeScope(jjtn002);
      try {
        vexp();
      } catch (Throwable jjte002) {
if (jjtc002) {
           jjtree.clearNodeScope(jjtn002);
           jjtc002 = false;
         } else {
           jjtree.popNode();
         }
         if (jjte002 instanceof RuntimeException) {
           {if (true) throw (RuntimeException)jjte002;}
         }
         if (jjte002 instanceof ParseException) {
           {if (true) throw (ParseException)jjte002;}
         }
         {if (true) throw (Error)jjte002;}
      } finally {
if (jjtc002) {
           jjtree.closeNodeScope(jjtn002,  3);
           if (jjtree.nodeCreated()) {
            jjtreeCloseNodeScope(jjtn002);
           }
         }
      }
    }
}

  static final public void vexp() throws ParseException {/*@bgen(jjtree) vexp */
  ASTvexp jjtn000 = new ASTvexp(JJTVEXP);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ASSIGN:{
        jj_consume_token(ASSIGN);
        exp();
        break;
        }
      default:
        jj_la1[6] = jj_gen;
ASTomega jjtn001 = new ASTomega(JJTOMEGA);
        boolean jjtc001 = true;
        jjtree.openNodeScope(jjtn001);
        jjtreeOpenNodeScope(jjtn001);
        try {
jjtree.closeNodeScope(jjtn001, true);
        jjtc001 = false;
        if (jjtree.nodeCreated()) {
         jjtreeCloseNodeScope(jjtn001);
        }

        } finally {
if (jjtc001) {
          jjtree.closeNodeScope(jjtn001, true);
          if (jjtree.nodeCreated()) {
           jjtreeCloseNodeScope(jjtn001);
          }
        }
        }
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        if (jjtree.nodeCreated()) {
         jjtreeCloseNodeScope(jjtn000);
        }
      }
    }
}

  static final public void methmain() throws ParseException {/*@bgen(jjtree) #main( 2) */
  ASTmain jjtn000 = new ASTmain(JJTMAIN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
    try {
      jj_consume_token(MAIN);
      jj_consume_token(LBRACE);
      vars();
      instrs();
      jj_consume_token(RBRACE);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000,  2);
        if (jjtree.nodeCreated()) {
         jjtreeCloseNodeScope(jjtn000);
        }
      }
    }
}

  static final public void entetes() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:
    case BOOLEAN:{
      entete();
ASTentetes jjtn001 = new ASTentetes(JJTENTETES);
               boolean jjtc001 = true;
               jjtree.openNodeScope(jjtn001);
               jjtreeOpenNodeScope(jjtn001);
      try {
        entetes_();
      } catch (Throwable jjte001) {
if (jjtc001) {
                 jjtree.clearNodeScope(jjtn001);
                 jjtc001 = false;
               } else {
                 jjtree.popNode();
               }
               if (jjte001 instanceof RuntimeException) {
                 {if (true) throw (RuntimeException)jjte001;}
               }
               if (jjte001 instanceof ParseException) {
                 {if (true) throw (ParseException)jjte001;}
               }
               {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
                 jjtree.closeNodeScope(jjtn001,  2);
                 if (jjtree.nodeCreated()) {
                  jjtreeCloseNodeScope(jjtn001);
                 }
               }
      }
      break;
      }
    default:
      jj_la1[7] = jj_gen;
ASTenil jjtn002 = new ASTenil(JJTENIL);
        boolean jjtc002 = true;
        jjtree.openNodeScope(jjtn002);
        jjtreeOpenNodeScope(jjtn002);
      try {
jjtree.closeNodeScope(jjtn002, true);
        jjtc002 = false;
        if (jjtree.nodeCreated()) {
         jjtreeCloseNodeScope(jjtn002);
        }

      } finally {
if (jjtc002) {
          jjtree.closeNodeScope(jjtn002, true);
          if (jjtree.nodeCreated()) {
           jjtreeCloseNodeScope(jjtn002);
          }
        }
      }
    }
}

  static final public void entetes_() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case COMMA:{
      jj_consume_token(COMMA);
      entete();
ASTentetes jjtn001 = new ASTentetes(JJTENTETES);
                           boolean jjtc001 = true;
                           jjtree.openNodeScope(jjtn001);
                           jjtreeOpenNodeScope(jjtn001);
      try {
        entetes_();
      } catch (Throwable jjte001) {
if (jjtc001) {
                             jjtree.clearNodeScope(jjtn001);
                             jjtc001 = false;
                           } else {
                             jjtree.popNode();
                           }
                           if (jjte001 instanceof RuntimeException) {
                             {if (true) throw (RuntimeException)jjte001;}
                           }
                           if (jjte001 instanceof ParseException) {
                             {if (true) throw (ParseException)jjte001;}
                           }
                           {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
                             jjtree.closeNodeScope(jjtn001,  2);
                             if (jjtree.nodeCreated()) {
                              jjtreeCloseNodeScope(jjtn001);
                             }
                           }
      }
      break;
      }
    default:
      jj_la1[8] = jj_gen;
ASTenil jjtn002 = new ASTenil(JJTENIL);
      boolean jjtc002 = true;
      jjtree.openNodeScope(jjtn002);
      jjtreeOpenNodeScope(jjtn002);
      try {
jjtree.closeNodeScope(jjtn002, true);
      jjtc002 = false;
      if (jjtree.nodeCreated()) {
       jjtreeCloseNodeScope(jjtn002);
      }

      } finally {
if (jjtc002) {
        jjtree.closeNodeScope(jjtn002, true);
        if (jjtree.nodeCreated()) {
         jjtreeCloseNodeScope(jjtn002);
        }
      }
      }
    }
}

  static final public void entete() throws ParseException {
    type();
ASTentete jjtn001 = new ASTentete(JJTENTETE);
           boolean jjtc001 = true;
           jjtree.openNodeScope(jjtn001);
           jjtreeOpenNodeScope(jjtn001);
    try {
      ident();
    } catch (Throwable jjte001) {
if (jjtc001) {
             jjtree.clearNodeScope(jjtn001);
             jjtc001 = false;
           } else {
             jjtree.popNode();
           }
           if (jjte001 instanceof RuntimeException) {
             {if (true) throw (RuntimeException)jjte001;}
           }
           if (jjte001 instanceof ParseException) {
             {if (true) throw (ParseException)jjte001;}
           }
           {if (true) throw (Error)jjte001;}
    } finally {
if (jjtc001) {
             jjtree.closeNodeScope(jjtn001,  2);
             if (jjtree.nodeCreated()) {
              jjtreeCloseNodeScope(jjtn001);
             }
           }
    }
}

  static final public void instrs() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case RETURN:
    case WRITE:
    case WRITELN:
    case IF:
    case WHILE:
    case IDENT:{
      instr();
      jj_consume_token(SEMICOLON);
ASTinstrs jjtn001 = new ASTinstrs(JJTINSTRS);
                              boolean jjtc001 = true;
                              jjtree.openNodeScope(jjtn001);
                              jjtreeOpenNodeScope(jjtn001);
      try {
        instrs();
      } catch (Throwable jjte001) {
if (jjtc001) {
                                jjtree.clearNodeScope(jjtn001);
                                jjtc001 = false;
                              } else {
                                jjtree.popNode();
                              }
                              if (jjte001 instanceof RuntimeException) {
                                {if (true) throw (RuntimeException)jjte001;}
                              }
                              if (jjte001 instanceof ParseException) {
                                {if (true) throw (ParseException)jjte001;}
                              }
                              {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
                                jjtree.closeNodeScope(jjtn001,  2);
                                if (jjtree.nodeCreated()) {
                                 jjtreeCloseNodeScope(jjtn001);
                                }
                              }
      }
      break;
      }
    default:
      jj_la1[9] = jj_gen;
ASTinil jjtn002 = new ASTinil(JJTINIL);
        boolean jjtc002 = true;
        jjtree.openNodeScope(jjtn002);
        jjtreeOpenNodeScope(jjtn002);
      try {
jjtree.closeNodeScope(jjtn002, true);
        jjtc002 = false;
        if (jjtree.nodeCreated()) {
         jjtreeCloseNodeScope(jjtn002);
        }

      } finally {
if (jjtc002) {
          jjtree.closeNodeScope(jjtn002, true);
          if (jjtree.nodeCreated()) {
           jjtreeCloseNodeScope(jjtn002);
          }
        }
      }
    }
}
